# capability-graph-runtime

./: .gitignore  README.md  pyproject.toml
.pytest_tmp/test_benchmark_main_writes_bot0/: local.json  local.md
architecture/: # ADR-0001 — Core Contracts.txt
benchmark-manifests/: quixbugs-python-pilot-v1.json  swebench-verified-pilot-v1.json
benchmark-manifests/quantum-candidate/: lih-candidate-benchmark-v1.json
benchmark-results/: aws-qwen-hard-8task-100pct.json  coding-ab-real.json  local.json  local.md
docker/pulsate-http-integration/: Dockerfile  (+1 more)
docs/: quixbugs_python_pilot.md  sweagent_full_cycle_sandbox.md  sweagent_official_adapter.md  swebench_native_pilot.md  swebench_verified_pilot.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json
patches/: sweagent-v1.1.0-cgr-action-validator.patch  sweagent-v1.1.0-strict-thought-action.patch
requirements/: pulsate-http-integration-resolver-evidence.txt  quantum-preflight-resolver-evidence.txt  quantum-preflight.in
scripts/: build-pulsate-http-integration-image.sh  build-pulsate-ibm-runtime-image.sh  build-quantum-candidate-image.sh  build-quantum-preflight-image.ps1  build-quantum-preflight-image.sh  build-quantum-sweagent-tool-image.sh  check-quantum-sweagent-provider.sh  check-quantum-sweagent-tool-image.sh  ec2_native_sweagent_astropy.sh  ec2_sweagent_smoke.sh  prepare_quixbugs_pilot.sh  run-lih-quantum-preflight-acceptance.sh  run-lih-quantum-preflight.ps1  run-lih-quantum-preflight.sh  run-pulsate-http-integration.sh  run-pulsate-ibm-fake-integration.sh  run-pulsate-ibm-integration.sh  run-pulsate-natural-language-acceptance.sh  run-quantum-candidate-benchmark.sh  run-quantum-candidate-repair-benchmark.sh  run-quantum-preflight-integration.sh  run-quantum-sweagent-qwen-acceptance.sh  run-quantum-sweagent-qwen-provider-smoke.sh  setup_swebench_evaluator.sh  verify-quantum-candidate-repair-run.sh  verify-quantum-sweagent-qwen-acceptance.sh
tests/: test_benchmark.py  test_benchmark_report.py  test_booster.py  test_bootstrap.py  test_builtin_plugins.py  test_capability_graph.py  test_capability_router.py  test_cli.py  test_coding_agents.py  test_coding_patch_normalizer.py  test_coding_v1.py  test_competition.py  test_contracts.py  test_echo_plugin.py  test_events.py  test_fusion.py  test_graph_executor.py  test_hard_coding_suite.py  test_learning_memory.py  test_model_pipeline.py  test_model_plugins.py  test_openai_compatible_provider.py  test_openai_provider_plugin.py  test_plugin_lifecycle.py  test_plugin_loader.py  test_plugin_registry.py  test_pulsate_api.py  test_pulsate_experiments.py  test_pulsate_http_container.py  test_pulsate_ibm.py  test_pulsate_ibm_container.py  test_pulsate_ibm_fake_integration.py  test_pulsate_ibm_integration.py  test_pulsate_natural_language.py  test_pulsate_quantum_worker.py  test_pulsate_runs.py  test_pulsate_runs_integration.py  test_python_test_runner.py  test_quantum_candidate_adjudication.py  test_quantum_candidate_classification.py  (+25 more)
(+320 files in other folders)
