[build-system]
requires=["setuptools>=68","wheel"]
build-backend="setuptools.build_meta"

[project]
name="cgr"
version="0.1.0"
requires-python=">=3.12"
dependencies=["fastapi","pydantic>=2","pluggy","structlog","uvicorn"]

[project.scripts]
cgr-smoke = "cgr.apps.cli.main:main"
cgr-model-demo = "cgr.apps.cli.main:model_demo_main"
cgr-demo = "cgr.apps.cli.main:demo_main"
cgr-openai-demo = "cgr.apps.cli.main:openai_demo_main"

[project.optional-dependencies]
dev=["pytest","pytest-asyncio","ruff","black","mypy"]
