[build-system]
requires=["setuptools>=68","wheel"]
build-backend="setuptools.build_meta"

[project]
name="cgr"
version="0.1.0"
requires-python=">=3.12"
dependencies=["fastapi","pydantic>=2","pluggy","structlog","uvicorn"]

[project.scripts]
cgr-smoke = "cgr.apps.cli.main:main"
cgr-model-demo = "cgr.apps.cli.main:model_demo_main"
cgr-demo = "cgr.apps.cli.main:demo_main"
cgr-openai-demo = "cgr.apps.cli.main:openai_demo_main"
cgr-benchmark = "cgr.apps.cli.main:benchmark_main"
cgr-openai-benchmark = "cgr.apps.cli.main:openai_benchmark_main"
cgr-coding-ab-local = "cgr.apps.cli.main:coding_ab_local_main"
cgr-coding-ab-real = "cgr.apps.cli.main:coding_ab_real_main"
cgr-coding-ab-hard = "cgr.apps.cli.main:coding_ab_hard_main"
cgr-coding-ab-v1 = "cgr.apps.cli.main:coding_ab_v1_main"
cgr-coding-ab-repo-v0 = "cgr.apps.cli.main:coding_ab_repo_v0_main"
cgr-swebench-doctor = "cgr.swebench.cli:doctor_main"
cgr-swebench-gold-smoke = "cgr.swebench.cli:gold_smoke_main"
cgr-swebench-freeze-pilot = "cgr.swebench.cli:freeze_pilot_main"
cgr-swebench-integrity-check = "cgr.swebench.cli:integrity_check_main"
cgr-swebench-pilot = "cgr.swebench.cli:pilot_main"
cgr-swebench-agent = "cgr.swebench.agent:agent_main"
cgr-swebench-swe-agent-adapter = "cgr.swebench.swe_agent_adapter:adapter_main"
cgr-boost-local = "cgr.apps.cli.main:boost_local_main"

[project.optional-dependencies]
dev=["pytest","pytest-asyncio","ruff","black","mypy"]
swebench=["datasets>=3.0","swebench>=3.0"]
sweagent=["sweagent==1.1.0"]
